fix modal overflow

--- a/src/assets/style/layout/inputs/_next-input.scss
+++ b/src/assets/style/layout/inputs/_next-input.scss
@@ -1,7 +1,6 @@
 .next-input {
     &__content {
         position: relative;
-        margin-top: 20px;
         margin-bottom: 20px;
         &--error {
             .next-input__input {
