--- a/src/assets/style/layout/inputs/_upload-file.scss
+++ b/src/assets/style/layout/inputs/_upload-file.scss
@@ -23,8 +23,13 @@
         align-items: center;
         box-sizing: border-box;
         height: auto;
+        overflow-x: auto;
+
         &--error {
             border: 1px dashed $color-libs-error;
+        }
+        &--filled {
+            justify-content: start;
         }
     }
     input {
@@ -56,14 +61,12 @@
     &__items {
         height: 100%;
         width: 100%;
-        display: inline-flex;
-        flex-wrap: wrap;
-        gap: 3.2%;
-        row-gap: 0;
+        display: flex;
     }
     &__item {
+        display: inline-block;
         cursor: pointer;
-        width: 17%;
+        width: 85px;
         aspect-ratio: 1/1;
         position: relative;
         margin: 5px 0;
@@ -75,7 +78,10 @@
         align-items: center;
         box-shadow: 0px 1px 2px rgba(145, 158, 171, 0.16);
         border-radius: 8px;
-
+        &__wrap {
+            display: inline-block;
+            margin-right: 20px;
+        }
         p {
             @media screen and (max-width: 520px) {
                 font-size: 10px;
