--- a/src/assets/style/modules/components/_modal.scss
+++ b/src/assets/style/modules/components/_modal.scss
@@ -1,3 +1,6 @@
+.body--no-scroll {
+    overflow: hidden;
+}
 .modal {
     &__mask {
         display: block;
@@ -33,6 +36,9 @@
         &::-webkit-scrollbar {
             display: none;
         }
+        @media screen and (max-width: 520px) {
+            border-radius: 0;
+        }
     }
     &__header {
         margin-top: 0;
@@ -51,6 +57,16 @@
         position: absolute;
         right: 18px;
     }
+    &__footer {
+        justify-content: space-between;
+        @media screen and (max-width: 520px) {
+            justify-content: end;
+            .btn:first-child,
+            .next-btn:first-child {
+                margin-right: 20px;
+            }
+        }
+    }
 }
 
 .modal-next .modal {
@@ -65,6 +81,10 @@
         background-color: #fff;
         box-shadow: 0 2px 8px rgba(0, 0, 0, 0.33);
         transition: all 0.3s ease;
+        @media screen and (max-width: 520px) {
+            border-radius: 0;
+            padding: 24px 16px;
+        }
     }
     &__header {
         margin-top: 0;
@@ -76,6 +96,9 @@
     }
     &__body {
         margin: 44px 0;
+        @media screen and (max-width: 520px) {
+            margin: 27px 0;
+        }
     }
     &__default-button {
         float: right;
